@@ -1,30 +1,28 @@
 package it.pagopa.pn.timelineservice.service.impl;
 
-import it.pagopa.pn.timelineservice.dto.ext.notification.NotificationInt;
-import it.pagopa.pn.timelineservice.dto.ext.notification.status.NotificationStatusHistoryElementInt;
-import it.pagopa.pn.timelineservice.dto.ext.notification.status.NotificationStatusInt;
-import it.pagopa.pn.timelineservice.dto.timeline.TimelineElementInternal;
-import it.pagopa.pn.timelineservice.service.StatusService;
-import it.pagopa.pn.timelineservice.utils.StatusUtils;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.stereotype.Service;
+    import it.pagopa.pn.timelineservice.dto.notification.NotificationInfoInt;
+    import it.pagopa.pn.timelineservice.dto.notification.status.NotificationStatusHistoryElementInt;
+    import it.pagopa.pn.timelineservice.dto.notification.status.NotificationStatusInt;
+    import it.pagopa.pn.timelineservice.dto.timeline.TimelineElementInternal;
+    import it.pagopa.pn.timelineservice.service.StatusService;
+    import it.pagopa.pn.timelineservice.utils.StatusUtils;
+    import lombok.extern.slf4j.Slf4j;
+    import org.springframework.stereotype.Service;
+    import java.time.Instant;
+    import java.util.List;
+    import java.util.Set;
 
-import java.time.Instant;
-import java.util.List;
-import java.util.Set;
+    @Slf4j
+    @Service
+    public class StatusServiceImpl implements StatusService {
+        private final StatusUtils statusUtils;
 
-
-@Slf4j
-@Service
-public class StatusServiceImpl implements StatusService {
-    private final StatusUtils statusUtils;
-
-    public StatusServiceImpl(StatusUtils statusUtils) {
-        this.statusUtils = statusUtils;
-    }
+        public StatusServiceImpl(StatusUtils statusUtils) {
+            this.statusUtils = statusUtils;
+        }
 
     @Override
-    public it.pagopa.pn.timelineservice.service.StatusService.NotificationStatusUpdate computeStatusChange(TimelineElementInternal dto, Set<TimelineElementInternal> currentTimeline, NotificationInt notification) {
+    public NotificationStatusUpdate computeStatusChange(TimelineElementInternal dto, Set<TimelineElementInternal> currentTimeline, NotificationInfoInt notification) {
         log.debug("computeStatusChange Notification is present paProtocolNumber {} for iun {}", notification.getPaProtocolNumber(), dto.getIun());
 
         // - Calcolare lo stato corrente
@@ -43,7 +41,7 @@ public class StatusServiceImpl implements StatusService {
 
 
     @Override
-    public NotificationStatusUpdate getStatus(TimelineElementInternal dto, Set<TimelineElementInternal> currentTimeline, NotificationInt notification) {
+    public NotificationStatusUpdate getStatus(TimelineElementInternal dto, Set<TimelineElementInternal> currentTimeline, NotificationInfoInt notification) {
         log.debug("checkStatus is present paProtocolNumber {} for iun {}", notification.getPaProtocolNumber(), dto.getIun());
 
         NotificationStatusUpdate notificationStatusUpdate = computeStatusChange(dto, currentTimeline, notification);
@@ -55,15 +53,14 @@ public class StatusServiceImpl implements StatusService {
         return new NotificationStatusUpdate(currentState, nextState);
     }
 
-    private NotificationStatusHistoryElementInt computeLastStatusHistoryElement(NotificationInt notification, Set<TimelineElementInternal> currentTimeline) {
-        int numberOfRecipient = notification.getRecipients().size();
+    private NotificationStatusHistoryElementInt computeLastStatusHistoryElement(NotificationInfoInt notification, Set<TimelineElementInternal> currentTimeline) {
+        int numberOfRecipient = notification.getNumberOfRecipients();
         Instant notificationCreatedAt = notification.getSentAt();
         List<NotificationStatusHistoryElementInt> historyElementList = statusUtils.getStatusHistory(
                 currentTimeline,
                 numberOfRecipient,
                 notificationCreatedAt);
 
-        return historyElementList.get(historyElementList.size() - 1);
+            return historyElementList.getLast();
+        }
     }
-
-}
